tests/ui/const-generics/mgca/missing_generic_params.stderr
error: function items cannot be used as const args
  --> $DIR/missing_generic_params.rs:13:21
   |
LL | impl Trait for [(); N] {}
   |                     ^

error: aborting due to 1 previous error

